--- a/public/blog/css/index.css
+++ b/public/blog/css/index.css
@@ -31,6 +31,11 @@ body {
     margin-left: 20px;
 }
 
+.navBar > .imgMenu > a {
+    color: black;
+    text-decoration: none;
+}
+
 .navBar > .imgMenu > i.fa {
     font-size: 25px;
     cursor: pointer;
@@ -39,7 +44,7 @@ body {
     transition: .5s;
 }
 
-.navBar > .imgMenu > i.fa:hover {
+.navBar > .imgMenu > a > i.fa:hover {
     background-color: #3c40431a;
 }
 
