--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -20,6 +20,24 @@ body > h1 {
     text-shadow: 2px 2px 3px rgb(0 0 0 / 50%);
 }
 
+.spinner {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #ffa500bd;
+}
+
+.spinner > i {
+    position: fixed;
+    top: 42%;
+    left: 43%;
+    font-size: 92px;
+    color: white;
+    text-shadow: 2px 2px 4px rgb(0 0 0 / 50%);
+}
+
 .auth {
     border: 1px solid rgb(0 0 0 / 50%);
     padding: 25px;
