--- a/public/blog/articulos/css/index.css
+++ b/public/blog/articulos/css/index.css
@@ -156,6 +156,47 @@ body {
     margin-bottom: 10px;
 }
 
+/* No token */
+.login {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000e8;
+    color: white;
+    z-index: 11000;
+}
+
+.login > .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 80%;
+    max-height: 90%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 1px solid rgb(255 255 255 / 50%);
+    border-radius: 5px;
+    padding: 20px;
+    color: black;
+    background-color: white;
+    box-shadow: 3px 4px 6px rgb(255 255 255 / 50%);
+}
+
+.login > .content > p {
+    font-size: 20px;
+}
+
+.login > .content > a {
+    font-size: 20px;
+    box-shadow: 3px 4px 6px rgb(0 0 0 / 50%);
+}
+
 /* Spinner */
 .spinner::before {
     content: "";
@@ -167,7 +208,7 @@ body {
     height: 100%;
 }
 
-.spinner {
+.spinner::after {
     position: fixed;
     top: 39%;
     left: 44%;
@@ -327,6 +368,7 @@ body {
     justify-content: space-around;
     margin-bottom: 25px;
     margin-top: 10px;
+    width: 100%;
 }
 
 .topArticle > .imgArticle {
