--- a/public/blog/temas/css/index.css
+++ b/public/blog/temas/css/index.css
@@ -169,6 +169,47 @@ body {
     margin-bottom: 10px;
 }
 
+/* No token */
+.login {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000e8;
+    color: white;
+    z-index: 11000;
+}
+
+.login > .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 80%;
+    height: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 1px solid rgb(255 255 255 / 50%);
+    border-radius: 5px;
+    padding: 20px;
+    color: black;
+    background-color: white;
+    box-shadow: 3px 4px 6px rgb(255 255 255 / 50%);
+}
+
+.login > .content > p {
+    font-size: 25px;
+}
+
+.login > .content > a {
+    font-size: 20px;
+    box-shadow: 3px 4px 6px rgb(0 0 0 / 50%);
+}
+
 /* Spinner */
 .spinner::before {
     content: "";
