--- a/public/blog/articulos/css/index.css
+++ b/public/blog/articulos/css/index.css
@@ -122,6 +122,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index: 10000;
 }
 
 .userAccount > #logoUser {
@@ -563,36 +564,16 @@ df-messenger {
     padding: 5px;
 }
 
-.barra > .enviar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 10%;
-    height: 35px;
-    background-color: orange;
-    color: white;
-    border-radius: 10px;
-    cursor: pointer;
-}
-
-.barra > .cerrarVentana {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 10%;
-    height: 35px;
-    background-color: red;
-    color: white;
-    border-radius: 10px;
-    cursor: pointer;
-}
-
 .btnsParaEdicion {
     margin-bottom: 15px;
 }
 
-#deste {
-    width: 75%;
+.vistaPrevia {
+    width: 100%;
+}
+
+.textareas {
+    width: 90%;
     min-height: 75vh;
     resize: none;
 }
