--- a/public/css/index.css
+++ b/public/css/index.css
@@ -122,6 +122,7 @@ body.dark {
 }
 
 .toggle {
+    display: none;
     width: 40px;
     height: 40px;
     position: fixed;
@@ -283,6 +284,7 @@ body.dark {
     padding: 10px;
     margin: 25px;
     box-shadow: 6px 6px 4px rgb(0 0 0 / 50%);
+    width: 90%;
 }
 
 .comentariosLista > .comentario > img {
@@ -340,6 +342,7 @@ body.dark {
     padding: 10px;
     margin: 10px;
     border-top: 15px solid orange;
+    max-width: 90%;
 }
 
 .unPorque.dark {
@@ -400,14 +403,14 @@ body.dark {
     justify-content: center;
     background-color: #42a1d0;
     color: white;
-    text-shadow: 2px 2px 3px black;
+    text-shadow: 2px 2px 2px rgb(0 0 0 / 50%);
     border: 1px solid gray;
     border-top: 20px solid orange;
     margin: 15px;
     border-radius: 5px;
     box-shadow: 5px 5px 10px rgb(0 0 0 / 50%);
     padding: 15px;
-    min-width: 275px;
+    max-width: 90%;
     min-height: 460px;
 }
 
@@ -421,10 +424,13 @@ body.dark {
 .articulos > .ulArticulos > .articulo > .categoria {
     text-decoration: none;
     color: white;
+    transition: .5s;
+}
+
+.articulos > .ulArticulos > .articulo > .categoria > .contenido {
     font-weight: 600;
     font-size: 20px;
     text-shadow: 2px 2px 2px rgb(0 0 0 / 50%);
-    transition: .5s;
 }
 
 p.titleDad {
@@ -636,6 +642,11 @@ df-messenger {
 }
 
 @media (max-width: 800px) {
+
+    .toggle {
+        display: block;
+    }
+
     .navBar > #enlaces {
         display: none;
     }
@@ -683,6 +694,12 @@ df-messenger {
 
     .articulos > h3 {
         font-size: 20px;
+    }
+}
+
+@media (max-width: 400px) {
+    .unPorque {
+        width: 90%;
     }
 }
 
