--- a/public/blog/articulos/css/index.css
+++ b/public/blog/articulos/css/index.css
@@ -399,6 +399,21 @@ body {
 
 .articulosResultados > .articuloMini > .buttons {
     margin-top: 10px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.btnRow {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 5px;
+}
+
+.btnArticulo {
+    margin-right: 10px;
+    width: 47%;
 }
 
 /* Footer */
@@ -692,6 +707,14 @@ df-messenger {
 
 
 
+
+
+
+
+
+
+
+
 @media (max-width: 950px) {
     .menuBlog {
         display: none !important;
@@ -726,5 +749,26 @@ df-messenger {
 
     .resultadosDeMenu {
         width: 100%;
+    }
+}
+
+@media (max-width: 590px) {
+    .navBar > .imgMenu > a {
+        display: none;
+    }
+
+    .navBar {
+        min-height: 100px;
+    }
+}
+
+@media (max-width: 575px) {
+    .footer > .row > div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 5px 0px;
+        padding: 20px;
+        border-bottom: 1px solid white;
     }
 }
