--- a/public/posts/css/arts.css
+++ b/public/posts/css/arts.css
@@ -35,6 +35,23 @@ body.dark .categoriasDeArticulo {
     justify-content: center;
 }
 
+.primary {
+    font-weight: 600;
+    font-size: 18px;
+}
+
+#top {
+    margin-top: 20px;
+}
+
+#down {
+    margin-bottom: 20px;
+}
+
+.jC {
+    justify-content: center;
+}
+
 .hidden {
     display: none !important;
     transition: .5s;
@@ -214,6 +231,7 @@ body.dark .categoriasDeArticulo {
     flex-direction: column;
     align-items: center;
     margin-top: 30px;
+    box-shadow: inset 1px 1px 10px 2px rgb(0 0 0 / 30%);
 }
 
 .articulo > .contenido > .cabecera {
@@ -225,6 +243,7 @@ body.dark .categoriasDeArticulo {
 
 .articulo > .contenido > .cabecera > img {
     max-width: 500px;
+    margin-top: 5px;
 }
 
 #titulo.dark {
@@ -273,23 +292,27 @@ body.dark .categoriasDeArticulo {
 .articulosUl {
     display: flex;
     align-items: center;
-    justify-content: space-around;
     width: 100%;
     overflow-x: auto;
     padding: 10px;
 }
 
 .articuloLi {
-    background: #b5d3ff;
+    background: #42a1d0;
+    color: white;
     list-style: none;
     margin: 0px 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    min-width: 354px;
     padding: 10px;
+    border: 1px solid rgb(0 0 0 / 30%);
     border-top: 15px solid orange;
+    box-shadow: 3px 3px 5px rgb(0 0 0 / 50%);
     border-radius: 10px;
+    text-shadow: 1px 1px 2px rgb(0 0 0 / 50%);
 }
 
 .articuloLi.dark {
@@ -426,13 +449,10 @@ body.dark .categoriasDeArticulo {
     background-color: orange;
     color: white;
     width: 100%;
+    min-height: 330px;
 }
 
 .articulosEnGeneral > .intro > .left {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     text-align: center;
     padding: 10px;
 }
@@ -463,51 +483,58 @@ body.dark .categoriasDeArticulo {
     border-top: 15px solid yellow;
     padding: 20px 0px;
     text-shadow: 1px 1px 2px rgb(0 0 0 / 50%);
-    box-shadow: 0px 2px 5px rgb(0 0 0 / 50%);
+    box-shadow: 0px -3px 4px rgb(0 0 0 / 50%);
     width: 100%;
 }
 
 .ultimos3 {
     display: flex;
     width: 100%;
-    margin-top: 10px;
+    margin-bottom: 20px;
     overflow-x: auto;
 }
 
-.ultimos3 > .articuloUltimo {
+.ultimos3 > .articuloUltimo,
+.articuloDeCtg {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-width: 400px;
-    border: 1px solid rgb(0 0 0 / 50%);
+    min-width: 325px;
+    border: 1px solid rgb(0 0 0 / 30%);
     border-top: 10px solid orange;
-    border-radius: 10px;
-    margin: 0px 10px;
+    margin: 5px 10px;
     padding: 10px;
     box-shadow: 2px 2px 5px rgb(0 0 0 / 50%);
-    background-color: #a2c7ff;
+    background-color: #42a1d0;
+    color: white;
+    text-shadow: 1px 1px 2px rgb(0 0 0 / 50%);
 }
 
-.ultimos3 > .articuloUltimo > img {
+.ultimos3 > .articuloUltimo > img,
+.imgDeArticulos {
     max-width: 250px;
     max-height: 180px;
     border-radius: 5px;
 }
 
-.ultimos3 > .articuloUltimo > #tituloArticuloCarousel {
+.ultimos3 > .articuloUltimo > #tituloArticuloCarousel,
+.tituloDeArticulos {
+    text-align: center;
     font-weight: 600;
     font-size: 20px;
     margin: 10px 0px;
 }
 
-.ultimos3 > .articuloUltimo > #descArticuloCarousel {
+.ultimos3 > .articuloUltimo > #descArticuloCarousel,
+.contenidoDeArticulos {
     padding: 5px;
     margin-bottom: 10px;
     text-align: justify;
 }
 
-.ultimos3 > .articuloUltimo > #fechaArticuloCarousel {
+.ultimos3 > .articuloUltimo > #fechaArticuloCarousel,
+.fechaDeArticulos {
     font-weight: 600;
     text-align: right;
     margin-bottom: 10px;
@@ -519,8 +546,75 @@ body.dark .categoriasDeArticulo {
 
 #botonVermas > button {
     width: 100%;
+    letter-spacing: 1px;
 }
 
+/* Artículos por categoría */
+ul.articulosCtgUl {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+}
+
+li.categoriaLi {
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    overflow-x: auto;
+    margin: 10px 0px;
+    padding: 10px;
+    box-shadow: inset 1px 2px 5px 2px rgb(0 0 0 / 30%);
+    border-bottom: 1px solid rgb(0 0 0 / 30%);
+    background: radial-gradient(circle, transparent, #0000002b);
+}
+
+.categoriaLi > .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.categoriaLi > .content > h3 {
+    letter-spacing: 2px;
+    text-shadow: 1px 1px 2px rgb(0 0 0 / 50%);
+}
+
+.categoriaLi > .content > .descCategoria {
+    text-align: center;
+    width: 75%;
+    margin: 10px 0px;
+    font-size: 18px;
+}
+
+.articulosDeCtg {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    overflow-x: auto;
+    padding: 0;
+    margin: 15px 0px;
+}
+
+.articuloDeCtg {
+    margin: 5px 10px;
+    height: 490px;
+    padding: 7px;
+}
+
+.noHay {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.noHay > p {
+    font-weight: 600;
+    font-size: 20px;
+}
 
 /* Footer */
 .footer {
@@ -709,6 +803,11 @@ df-messenger {
     .intro > .left {
         backdrop-filter: blur(5px);
         height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        max-height: 460px;
     }
     
     .intro > .left > p {
