--- a/public/posts/css/arts.css
+++ b/public/posts/css/arts.css
@@ -8,6 +8,14 @@ body.dark {
     color: white;
 }
 
+body.dark .intro {
+    background-color: #a57845;
+}
+
+body.dark .titles {
+    border-top: 15px solid orange;
+}
+
 body.dark .categoriasUl > li {
     color: black;
 }
@@ -442,6 +450,11 @@ body.dark .categoriasDeArticulo {
     min-height: 80vh;
 }
 
+.articulosEnGeneral.dark {
+    background-color: #333;
+    color: white;
+}
+
 .articulosEnGeneral > .intro {
     display: flex;
     justify-content: space-around;
@@ -492,6 +505,11 @@ body.dark .categoriasDeArticulo {
     width: 100%;
     margin-bottom: 20px;
     overflow-x: auto;
+}
+
+.ultimos3 > .articuloUltimo.dark {
+    background-color: #356;
+    color: white;
 }
 
 .ultimos3 > .articuloUltimo,
@@ -595,6 +613,11 @@ li.categoriaLi {
     overflow-x: auto;
     padding: 0;
     margin: 15px 0px;
+}
+
+.articuloDeCtg.dark {
+    background-color: #356;
+    color: white;
 }
 
 .articuloDeCtg {
