--- a/public/blog/articulos/css/index.css
+++ b/public/blog/articulos/css/index.css
@@ -149,7 +149,7 @@ body {
     width: 100%;
 }
 
-.userAccount > .verCuenta {
+.userAccount > a > .verCuenta {
     margin-bottom: 10px;
 }
 
@@ -280,8 +280,9 @@ body {
 
 .blogsTitles > .tusBlogs {
     position: fixed;
-    top: 65px;
-    left: 10px;
+    top: 0;
+    left: 25%;
+    transform: translate(15%, 41%);
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -351,6 +352,7 @@ body {
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
+    transition: all .5s;
 }
 
 .noHay {
@@ -898,11 +900,234 @@ df-messenger {
     cursor: pointer;
 }
 
+.introDeBlog {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    min-height: 100vh;
+    background-color: orange;
+    color: black;
+}
 
+.intro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+    background: white;
+    color: black;
+    max-width: 500px;
+    padding: 20px;
+    border-bottom: 1px solid rgb(0 0 0 / 30%);
+    box-shadow: inset 0px 0px 5px 2px rgb(0 0 0 / 30%);
+}
 
+.intro > h1,
+.intro > h3 {
+    margin-bottom: 20px;
+}
 
+.intro > p {
+    width: 75%;
+    font-size: 22px;
+}
 
+.intro > #primerSiguiente {
+    width: 100%;
+    font-size: 22px;
+}
 
+.intro > #primersiguiente > .fa-fighter-jet {
+    margin-left: 10px;
+}
+
+.crearlo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    background: white;
+    color: black;
+    box-shadow: inset 0px 0px 8px 3px rgb(0 0 0 / 30%);
+}
+
+.crearlo > p {
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.crearlo > label {
+    font-weight: 600;
+    font-size: 22px;
+    margin-top: 20px;
+}
+
+.crearlo > input:focus-visible {
+    outline: none;
+}
+
+.crearlo > input::placeholder {
+    font-weight: 600;
+}
+
+.crearlo > input {
+    padding: 5px;
+    border: none;
+    border-bottom: 1px solid orange;
+    background: transparent;
+    width: 100%;
+    font-size: 20px;
+}
+
+#segundoSiguiente {
+    margin-top: 20px;
+    width: 100%;
+    font-size: 22px;
+}
+
+#segundoSiguiente > .fa-fighter-jet {
+    margin-left: 10px;
+}
+
+.descripciones {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: orange;
+    color: white;
+}
+
+.descripciones > .cuadro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 95%;
+    background: white;
+    color: black;
+    padding: 10px;
+    margin: 20px 0px;
+    border-bottom: 1px solid rgb(0 0 0 / 30%);
+    box-shadow: inset 0px 3px 5px 2px rgb(0 0 0 / 30%);
+}
+
+.descripciones > h1 {
+    margin-top: 25px;
+    text-shadow: 2px 2px 2px rgb(0 0 0 / 50%);
+}
+
+.descripciones > .cuadro > span {
+    margin: 10px 0px;
+    font-size: 25px;
+    font-weight: 600;
+    text-align: center;
+}
+
+#muchoTexto {
+    padding: 0 20px;
+    margin: 20px 0;
+}
+
+.descripciones > .cuadro > img {
+    width: 75%;
+    border: 1px solid black;
+    box-shadow: 3px 3px 5px rgb(0 0 0 / 50%);
+}
+
+.descripciones > .cuadro > #cuadroDePerfil {
+    height: 425px;
+    width: 376px;
+}
+
+.descripciones > .cuadro > #crearArticulo {
+    width: 250px;
+}
+
+.descripciones > .cuadro > #hojaDeEstilo {
+    width: 90%;
+}
+
+#funciones {
+    font-size: 35px;
+    margin: 10px 0;
+}
+
+#ulFunciones {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding: 0;
+    width: 100%;
+}
+
+#ulFunciones > li {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 48%;
+    border: 1px solid black;
+    border-top: 15px solid #535ccf;
+    border-radius: 5px;
+    background: #ebdfb5;
+    color: black;
+    padding: 10px;
+    text-shadow: none;
+    margin: 10px 0;
+    box-shadow: 2px 2px 5px rgb(0 0 0 / 50%);
+}
+
+#ulFunciones > li > span {
+    font-size: 21px;
+    text-shadow: 1px 1px 1px rgb(0 0 0 / 30%);
+    text-align: center;
+    margin: 5px 0px;
+}
+
+#ulFunciones > li > img {
+    max-width: 95%;
+    border: 1px solid rgb(0 0 0 / 50%);
+}
+
+#botonesUl > ul {
+    width: 100%;
+    padding: 0;
+}
+
+#botonesUl > ul > li {
+    list-style: none;
+    padding: 5px;
+    border-bottom: 1px solid rgb(0 0 0 / 30%);
+}
+
+#botonesUl > p {
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 0;
+    color: blue;
+    width: 75%;
+    text-align: center;
+}
+
+#botonesFinales > span {
+    font-size: 20px;
+}
+
+.descripciones > button {
+    width: 100%;
+    margin-bottom: 20px;
+    font-size: 25px;
+}
+
+.descripciones > button > i {
+    margin-left: 10px;
+}
 
 
 
