--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -88,6 +88,17 @@ body > h1 {
     margin-top: 20px;
 }
 
+.auth > .register > label {
+    font-weight: 600;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    font-size: 18px;
+}
+
+.auth > .register > input[type=file] {
+    margin-bottom: 10px;
+}
+
 .auth > .register > button.btn-primary {
     width: 100%;
 }
