--- a/public/blog/perfil/index.css
+++ b/public/blog/perfil/index.css
@@ -8,26 +8,6 @@ body.dark {
     color: white;
 }
 
-body.dark .intro {
-    background-color: #a57845;
-}
-
-body.dark .titles {
-    border-top: 15px solid orange;
-}
-
-body.dark .categoriasUl > li {
-    color: black;
-}
-
-body.dark .buscador > input {
-    color: white;
-}
-
-body.dark .categoriasDeArticulo {
-    border-top: 1px solid white;
-}
-
 .row {
     --bs-gutter-x: 0;
 }
@@ -41,6 +21,10 @@ body.dark .categoriasDeArticulo {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.gris {
+    background: rgb(0 0 0 / 20%);
 }
 
 .primary {
@@ -224,13 +208,395 @@ body.dark .categoriasDeArticulo {
     cursor: pointer;
 }
 
+/* No token */
+.login {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000e8;
+    color: white;
+    z-index: 11000;
+}
+
+.login > .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 80%;
+    max-height: 90%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 1px solid rgb(255 255 255 / 50%);
+    border-radius: 5px;
+    padding: 20px;
+    color: black;
+    background-color: white;
+    box-shadow: 3px 4px 6px rgb(255 255 255 / 50%);
+}
+
+.login > .content > p {
+    font-size: 20px;
+}
+
+.login > .content > a {
+    font-size: 20px;
+    box-shadow: 3px 4px 6px rgb(0 0 0 / 50%);
+}
+
+/* Spinner */
+.spinner::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #ffa500d1;
+    width: 100%;
+    height: 100%;
+}
+
+.spinner {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #ffa500bd;
+}
+
+.spinner > i {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 92px;
+    color: white;
+    text-shadow: 2px 2px 4px rgb(0 0 0 / 50%);
+}
+
+.spinner::after {
+    position: fixed;
+    top: 39%;
+    left: 44%;
+    border-radius: 10px;
+    border: 1px solid rgb(0 0 0 / 50%);
+    padding: 25px;
+    background: white;
+    font-size: 25px;
+    box-shadow: 3px 4px 6px rgb(0 0 0 / 50%);
+    z-index: 100000;
+}
+
 /* Perfil */
 .perfil {
     margin-top: 90px;
     min-height: 80vh;
 }
 
+.perfil > #intro {
+    text-align: center;
+    font-size: 30px;
+    padding-top: 15px;
+    font-weight: 600;
+}
 
+.divCentral {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.lateral.dark {
+    background: #333;
+    color: white;
+}
+
+.lateral {
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: white;
+    color: black;
+    min-height: 70vh;
+    padding: 10px;
+    border-bottom: 1px solid rgb(0 0 0 / 30%);
+    box-shadow: inset 0px 0px 8px 2px rgb(0 0 0 / 30%);
+}
+
+.lateral > img {
+    max-width: 110px;
+    max-height: 250px;
+    border-radius: 50%;
+    margin-top: 25px;
+    border: 1px solid rgb(0 0 0 / 30%);
+}
+
+.lateral > label {
+    margin-top: 15px;
+    font-weight: 600;
+    font-size: 18px;
+}
+
+#correoLateral {
+    margin-bottom: 10px;
+}
+
+.lateral > .togglePerfil:hover {
+    background-color: rgb(0 0 0 / 30%);
+}
+
+.lateral > .togglePerfil {
+    margin: 5px 0;
+    border-top: 1px solid rgb(0 0 0 / 30%);
+    border-bottom: 1px solid rgb(0 0 0 / 30%);
+    width: 100%;
+    padding: 10px;
+    font-weight: 600;
+    font-size: 17px;
+    cursor: pointer;
+    transition: all .5s;
+}
+
+.window.dark {
+    background: #333;
+    color: white;
+}
+
+.window.dark input,
+.window.dark textarea {
+    color: white;
+}
+
+.window.dark input::placeholder,
+.window.dark textarea::placeholder {
+    color: white;
+}
+
+.window.dark .display-table > span {
+    color: black;
+}
+
+.window.dark .display-table > input {
+    color: white;
+    background: transparent;
+}
+
+.window.dark .passwordInputs > input {
+    color: white;
+    background: transparent;
+}
+
+.window.dark #correo {
+    color: white;
+    background: transparent;
+}
+
+.caracteristicas {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    background: white;
+    color: color;
+    width: 70%;
+    padding: 20px;
+    border-bottom: 1px solid rgb(0 0 0 / 30%);
+    box-shadow: inset 0px 0px 8px 2px rgb(0 0 0 / 30%);
+}
+
+.caracteristicas > h2 {
+    text-align: center;
+    margin: 10px 0;
+}
+
+.caracteristicas > strong {
+    padding: 5px;
+    font-size: 20px;
+}
+
+.caracteristicas > label {
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.caracteristicas > input:focus-visible {
+    outline: none;
+}
+
+.caracteristicas > input::placeholder,
+.caracteristicas > textarea::placeholder {
+    color: rgba(0, 0, 0, 0.596);
+    font-weight: 600;
+    opacity: .75;
+}
+
+.caracteristicas > input {
+    padding: 5px;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid orange;
+    border-radius: 5px;
+    margin-top: 5px;
+    font-size: 18px;
+}
+
+.caracteristicas > textarea:focus-visible {
+    outline: none;
+}
+
+.caracteristicas > textarea {
+    background: transparent;
+    border: 1px solid orange;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 5px;
+    font-size: 18px;
+    resize: none;
+}
+
+.caracteristicas > .display-table {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.caracteristicas > .display-table > span {
+    min-width: 183px;
+    background: rgb(255, 220, 154);
+    border: 1px solid rgb(0 0 0 / 30%);
+    border-right: none;
+    padding: 10px;
+    text-align: center;
+}
+
+.caracteristicas > .display-table > input:focus-visible {
+    outline: none;
+}
+
+.caracteristicas > .display-table > input {
+    width: 75%;
+    height: 45px;
+    padding: 10px;
+}
+
+.imgDePerfil {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: white;
+    color: color;
+    width: 70%;
+    padding: 20px;
+    border-bottom: 1px solid rgb(0 0 0 / 30%);
+    box-shadow: inset 0px 0px 8px 2px rgb(0 0 0 / 30%);
+}
+
+.imgDePerfil > h2 {
+    text-align: center;
+    margin: 10px 0;
+}
+
+.imgDePerfil > .vistaPrevia {
+    width: 90%;
+    margin-top: 20px;
+    border: 2px solid rgb(0 0 0 / 50%);
+    height: 300px;
+    background: rgb(0 0 0 / 30%);
+}
+
+.vistaPrevia > .sinImg,
+.vistaPrevia > .conImg {
+    padding: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.vistaPrevia > .sinImg > img,
+.vistaPrevia > .conImg > img {
+    height: 270px;
+    max-height: 270px;
+}
+
+#imgParaSubir {
+    font-size: 25px;
+}
+
+#guardarImg {
+    font-size: 20px;
+}
+
+.password {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: white;
+    color: color;
+    width: 70%;
+    padding: 20px;
+    border-bottom: 1px solid rgb(0 0 0 / 30%);
+    box-shadow: inset 0px 0px 8px 2px rgb(0 0 0 / 30%);
+}
+
+.password > .correo {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.password > .correo > p {
+    font-size: 18px;
+    border: 1px solid black;
+    padding: 10px;
+}
+
+#correo:focus-visible {
+    outline: none;
+}
+
+#correo {
+    margin-left: 5px;
+    border: none;
+    border-bottom: 1px solid orange;
+}
+
+.password > .correo > button {
+    border: 1px solid black;
+    height: 49px;
+    border-radius: 0;
+}
+
+.correo > button > i {
+    font-size: 18px;
+}
+
+.passwordInputs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.passwordInputs > input {
+    width: 75%;
+    margin-bottom: 10px;
+    padding: 10px;
+    font-size: 18px;
+}
+
+#guardarCuenta {
+    font-size: 18px;
+}
 
 
 /* Footer */
@@ -376,41 +742,50 @@ df-messenger {
 
 
 /* Media queries */
-@media (max-width: 950px) {
-    .menuBlog {
-        display: none !important;
+@media (max-width: 800px) {
+
+    .toggle {
+        display: block;
     }
 
-    .menuBlog.responsive {
+    .navBar > #enlaces {
+        display: none;
+    }
+
+    #enlaces.active {
         display: flex !important;
-        min-height: 100%;
+        flex-direction: column-reverse;
+        align-items: center;
         position: fixed;
         top: 0;
         left: 0;
-        z-index: 10000;
-        box-shadow: 3px 0px 5px rgb(0 0 0 / 50%);
+        background-color: white;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
     }
 
-    .menuBlog.responsive > .close {
-        display: flex;
+    #enlaces.active > .enlace {
+        margin-bottom: 25px;
+    }
+
+    .divCentral {
+        flex-direction: column;
         align-items: center;
-        justify-content: flex-end;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 65px;
-        background: gray;
-        font-size: 45px;
-        padding-right: 10px;
-        color: white;
-        text-shadow: 2px 2px 2px rgb(0 0 0 / 50%);
-        cursor: pointer;
     }
 
-    .resultadosDeMenu {
-        width: 100%;
+    .lateral {
+        width: 95%;
+        margin-bottom: 15px;
+        box-shadow: none;
     }
+
+    .caracteristicas,
+    .imgDePerfil,
+    .password {
+        width: 95%;
+    }
+
 }
 
 @media (max-width: 575px) {
