--- a/public/css/index.css
+++ b/public/css/index.css
@@ -58,7 +58,7 @@ body.dark {
 
 .navBar > #enlaces > .enlace a {
     text-decoration: none;
-    color: black;
+    color: black !important;
     font-size: 20px;
     font-weight: 600;
 }
