--- a/public/blog/articulos/css/index.css
+++ b/public/blog/articulos/css/index.css
@@ -29,13 +29,28 @@ body {
 }
 
 /* NavBar */
+.navBar.dark {
+    background: #555 !important;
+    color: white;
+}
+
+.navBar.dark .enlace > a {
+    color: white !important;
+}
+
 .navBar {
-    box-shadow: 0px 1px 4px rgb(0 0 0 / 50%);
-    width: 100%;
-    background-color: white;
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    background: white;
+    z-index: 1000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    border-bottom: 1px solid rgb(0 0 0 / 50%);
+    box-shadow: 0px 1px 3px rgb(0 0 0 / 50%);
+    transition: .5s;
 }
 
 /* Menú-logo */
@@ -67,34 +82,144 @@ body {
 }
 
 /* Buscador */
-.navBar > .buscador  {
+#buscadorEnlace  {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #3c40431a;
     width: 50%;
     border-radius: 10px;
     padding: 10px;
 }
 
-.navBar > .buscador > i.fa {
+#buscadorEnlace > i {
     margin-left: 20px;
     font-size: 20px;
     cursor: pointer;
 }
 
-.navBar > .buscador > #buscador {
+#buscadorEnlace > #buscador {
     border-radius: 10px;
     outline: none;
     border: none;
     background: transparent;
-    width: 50%;
     height: 35px;
     padding-left: 15px;
     font-size: 18px;
 }
 
-.navBar > .buscador > #buscador::placeholder {
+.navBar > #enlaces.dark > .enlace a {
+    color: white;
+}
+
+.navBar > #enlaces {
+    display: flex;
+    align-items: center;
+    margin: 0;
+}
+
+.navBar > #enlaces > .enlace {
+    list-style: none;
+    margin-right: 20px;
+}
+
+.navBar > #enlaces > .enlace a {
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
     font-weight: 600;
-    color: gray;
-    font-size: 18px;
+}
+
+/* Buscador */
+.buscador {
+    background-color: #00000021;
+    padding: 5px;
+    border-radius: 10px;
+}
+
+.buscador > input:focus-visible {
+    outline: none;
+}
+
+.buscador > input {
+    background: transparent;
+    border: none;
+    margin-left: 5px;
+}
+
+.enlace > #check {
+    display: none;
+}
+
+.enlace > .modoOscuro {
+    font-family: FontAwesome;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    background: #838383;
+    text-shadow: 1px 1px 2px rgb(0 0 0 / 50%);
+    width: 70px;
+    height: 35px;
+    border: 1px solid black;
+    border-radius: 100px;
+    position: relative;
+    cursor: pointer;
+    transition: .5s;
+}
+
+.modoOscuro::after {
+    content: "\f186";
+    display: flex;
+    width: 27px;
+    height: 27px;
+    background: white;
+    border-radius: 100px;
+    border: 1px solid black;
+    position: absolute;
+    top: 3px;
+    left: 4px;
+    transition: .5s;
+    align-items: center;
+    justify-content: center;
+}
+
+#check:checked + .modoOscuro {
+    background: orange;
+}
+
+#check:checked + .modoOscuro::after {
+    content: "\f185";
+    left: 36px;
+}
+
+.toggle {
+    display: none;
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    top: 38px;
+    right: 25px;
+    background: url(../../img/openSun.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 10000;
+    cursor: pointer;
+}
+
+.toggle.active {
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    top: 25px;
+    right: 25px;
+    background: url(../../img/closeSun.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 10000;
+    cursor: pointer;
 }
 
 /* User */
@@ -240,7 +365,7 @@ body {
 /* Menú */
 .blogStructure {
     width: 100%;
-    margin-top: 2px;
+    margin-top: 125px;
     min-height: 75ch;
 }
 
@@ -283,6 +408,7 @@ body {
     top: 0;
     left: 25%;
     transform: translate(15%, 41%);
+    width: 274px;
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -1142,42 +1268,34 @@ df-messenger {
 
 
 
+/* Media queries */
+@media (max-width: 780px) {
 
-@media (max-width: 950px) {
-    .menuBlog {
-        display: none !important;
+    .toggle {
+        display: block;
     }
 
-    .menuBlog.responsive {
+    .navBar > #enlaces {
+        display: none;
+    }
+
+    #enlaces.active {
         display: flex !important;
-        min-height: 100%;
+        flex-direction: column-reverse;
+        align-items: center;
         position: fixed;
         top: 0;
         left: 0;
-        z-index: 10000;
-        box-shadow: 3px 0px 5px rgb(0 0 0 / 50%);
+        background-color: white;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
     }
 
-    .menuBlog.responsive > .close {
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 65px;
-        background: gray;
-        font-size: 45px;
-        padding-right: 10px;
-        color: white;
-        text-shadow: 2px 2px 2px rgb(0 0 0 / 50%);
-        cursor: pointer;
+    #enlaces.active > .enlace {
+        margin-bottom: 25px;
     }
 
-    .resultadosDeMenu {
-        width: 100%;
-    }
 }
 
 @media (max-width: 590px) {
