--- a/public/blog/articulos/css/index.css
+++ b/public/blog/articulos/css/index.css
@@ -1395,16 +1395,10 @@ df-messenger {
         margin-bottom: 25px;
     }
 
-}
-
-@media (max-width: 590px) {
-    .navBar > .imgMenu > a {
+    .navBar > .imgMenu > i {
         display: none;
     }
 
-    .navBar {
-        min-height: 100px;
-    }
 }
 
 @media (max-width: 575px) {
